syntax = "proto3";

package fanout;

option go_package = "github.com/ArmaanKatyal/tweetbit/backend/fanoutService;fanoutService";

service TweetService {
    rpc CreateTweet (CreateTweetRequest) returns (CreateTweetResponse) {}
}

message CreateTweetRequest {
    string id = 1;
    string content = 2;
    string user_id = 3;
    string uuid = 4;
    string created_at = 5;
    string likes_count = 6;
    string retweets_count = 7;
}

message CreateTweetResponse {
    bool success = 1;
}